[gd_scene load_steps=6 format=3 uid="uid://cn57enccajwlt"]

[ext_resource type="Script" uid="uid://bkm0fcgm23uyx" path="res://menus/lobby/lobby.gd" id="1_l1s41"]
[ext_resource type="Script" uid="uid://cn1a8jcmx6u4f" path="res://menus/lobby/player_list.gd" id="2_kssl2"]
[ext_resource type="Script" uid="uid://ls8vpr77jcfm" path="res://menus/lobby/countdown.gd" id="3_lv8s3"]

[sub_resource type="LabelSettings" id="LabelSettings_kssl2"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_lv8s3"]
font_size = 20

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l1s41")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 137.0
offset_top = 69.0
offset_right = -137.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
text = "Lobby"
label_settings = SubResource("LabelSettings_kssl2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.169
anchor_top = 0.129
anchor_right = 0.831
anchor_bottom = 0.808
offset_left = -0.382019
offset_top = 0.209999
offset_right = 0.381958
offset_bottom = -0.0800171
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("2_kssl2")

[node name="Ready" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.303
anchor_top = 0.878
anchor_right = 0.697
anchor_bottom = 0.939
offset_left = -0.0339966
offset_top = 0.220001
offset_right = 0.0339966
offset_bottom = 0.109955
grow_horizontal = 2
grow_vertical = 0
text = "Ready"

[node name="Unready" type="Button" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.303
anchor_top = 0.878
anchor_right = 0.697
anchor_bottom = 0.939
offset_left = -0.0339966
offset_top = 0.220001
offset_right = 0.0339966
offset_bottom = 0.109955
grow_horizontal = 2
grow_vertical = 0
text = "Unready"

[node name="Countdown" type="HBoxContainer" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.409
anchor_top = 0.778
anchor_right = 0.591
anchor_bottom = 0.824
offset_left = -0.10202
offset_top = 0.219971
offset_right = 0.10199
offset_bottom = -0.240021
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Panel/Countdown"]
layout_mode = 2
text = "Starting: "
label_settings = SubResource("LabelSettings_lv8s3")
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="Panel/Countdown" node_paths=PackedStringArray("timer")]
layout_mode = 2
label_settings = SubResource("LabelSettings_lv8s3")
vertical_alignment = 1
script = ExtResource("3_lv8s3")
timer = NodePath("../../../StartDelay")

[node name="StartDelay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="start_countdown" from="." to="StartDelay" method="start"]
[connection signal="start_countdown" from="." to="Panel/Countdown" method="show"]
[connection signal="stop_countdown" from="." to="StartDelay" method="stop"]
[connection signal="stop_countdown" from="." to="Panel/Countdown" method="hide"]
[connection signal="pressed" from="Panel/Ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="Panel/Ready" to="Panel/Ready" method="hide"]
[connection signal="pressed" from="Panel/Ready" to="Panel/Unready" method="show"]
[connection signal="pressed" from="Panel/Unready" to="." method="_on_unready_pressed"]
[connection signal="pressed" from="Panel/Unready" to="Panel/Ready" method="show"]
[connection signal="pressed" from="Panel/Unready" to="Panel/Unready" method="hide"]
[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
